--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,4 +15,12 @@ section: blog
     <h2>{{ page.title }}</h2>
     {{ content }}
   </div>
+  <div class="pagination">
+    {% if page.previous.url %}
+    <a href="{{ page.previous.url}}" class="previous"><span class="arrow">← </span>{{page.previous.title}}</a>
+    {% endif %}
+    {% if page.next.url %}
+    <a href="{{page.next.url}}" class="next">{{page.next.title}}<span class="arrow"> →</span></a>
+    {% endif %}
+  </div>
 </div>
