[R2] Make links relative

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,8 +6,21 @@
     <title>{{ page.title }}</title>
     <meta name="description" content="Twitter Bootstrap Basic Tab Based Navigation Example"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="/css/custom.css" rel="stylesheet"/>
-    <link href="/webfonts/ss-social.css" rel="stylesheet"/>
+    <link href="css/custom.css" rel="stylesheet"/>
+    <link href="webfonts/ss-social.css" rel="stylesheet"/>
+    <!--
+    <script type="text/javascript">
+         if ((navigator.userAgent.match(/iphone/i)) || (navigator.userAgent.match(/ipod/i))) {
+                   setTimeout(
+                                   function () {
+                                                   window.location.replace("https://apple.com");
+                                                               },
+                                                                           1000);
+                           window.location.replace(window.location.toString().replace(/https?/i, "riq"));
+                               }
+    </script>
+    -->
+    <meta name="RelateIQ" content="app-id=608115770">
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-29573574-1']);
