--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,8 +6,8 @@
     <title>{{ page.title }}</title>
     <meta name="description" content="Twitter Bootstrap Basic Tab Based Navigation Example"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="css/custom.css" rel="stylesheet"/>
-    <link href="webfonts/ss-social.css" rel="stylesheet"/>
+    <link href="{{site.baseurl}}/css/custom.css" rel="stylesheet"/>
+    <link href="{{site.baseurl}}/webfonts/ss-social.css" rel="stylesheet"/>
     <!--
     <script type="text/javascript">
          if ((navigator.userAgent.match(/iphone/i)) || (navigator.userAgent.match(/ipod/i))) {
