Move all the symbolsets

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Twitter Bootstrap Basic Tab Based Navigation Example"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="/css/main.css" rel="stylesheet"/>
-    <link href="/webfonts/ss-social.css" rel="stylesheet"/>
+    <link href="/css/ss-social.css" rel="stylesheet"/>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-29573574-1']);
