--- a/css/main.css
+++ b/css/main.css
@@ -311,13 +311,20 @@ code {
   margin: 0 .2rem;
   font-size: 90%;
   white-space: nowrap;
-  background: #F1F1F1;
+  background: #dfe2f1;
   border: 1px solid #E1E1E1;
-  border-radius: 4px; }
+  border-radius: 4px; 
+  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+  background: #f5f7ff;
+  color: #5e6687;
+}
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
-  white-space: pre; }
+  white-space: pre; 
+  border: none;
+  border-radius: 4px; 
+}
 
 
 /* Tables
